@@ -10,38 +10,32 @@
     <parent>
         <groupId>com.telefonica.euro_iaas</groupId>
         <artifactId>sdc-server</artifactId>
-        <version>2.0.0</version>
+        <version>2.1.0</version>
     </parent>
-
-    <properties>
-        <spring.version>3.0.5.RELEASE</spring.version>
-    </properties>
 
     <dependencies>
 
         <dependency>
-            <groupId>com.telefonica.euro_iaas</groupId>
-            <artifactId>sdc-server-model</artifactId>
-            <version>${project.version}</version>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
         </dependency>
-
+        <!-- httpclient -->
         <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
-            <version>1.0</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.1</version>
         </dependency>
-        <!--  <dependency>
-              <groupId>net.sf.json-lib</groupId>
-              <artifactId>json-lib</artifactId>
-             <version>2.4</version>
-              <classifier>jdk15</classifier>
-          </dependency>-->
-
         <!-- Webedav java client Sardine -->
         <dependency>
             <groupId>com.googlecode.sardine</groupId>
             <artifactId>sardine</artifactId>
             <version>146</version>
+        </dependency>
+        <dependency>
+            <groupId>com.telefonica.euro_iaas</groupId>
+            <artifactId>sdc-server-model</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <!-- Persistence -->
         <dependency>
@@ -52,20 +46,15 @@
         <dependency>
             <groupId>com.telefonica.euro_iaas</groupId>
             <artifactId>commons-properties</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>persistence-api</artifactId>
+                    <groupId>javax.persistence</groupId>
+                </exclusion>
+            </exclusions>
 
         </dependency>
-        <!-- FOR ENTITY-MANAGER -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.4.2</version>
-        </dependency>
-        <!-- concrete Log4J Implementation for SLF4J API -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.4.2</version>
-        </dependency>
+
 
         <dependency>
             <groupId>commons-lang</groupId>
@@ -78,13 +67,63 @@
             <version>2.0.1</version>
         </dependency>
 
-        <!-- SPRING DEPENDENCIES -->
+        <!-- jpa implementation - hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring-data-jpa.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hibernate.javax.persistence</groupId>
+                    <artifactId>hibernate-jpa-2.0-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+        <dependency>
+            <!-- To get test datasource -->
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <!-- jsr 330 -->
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+
+        <!-- SPRING DEPENDENCIES -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -134,6 +173,17 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>${springdata.commons.version}</version>
         </dependency>
 
         <dependency>
@@ -142,13 +192,37 @@
             <version>1.6.0</version>
             <scope>compile</scope>
         </dependency>
+
         <!-- /SPRING DEPENDENCIES -->
+
+        <!-- SPRINC SECURITY DEPENDENCIES -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-expression</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -167,31 +241,16 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
         </dependency>
+
+
+        <!-- Memory DataBase -->
         <dependency>
-            <!-- To get test datasource -->
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>1.8.0.7</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- Introduce hibernate-core-3.6.0 -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>3.3.0.SP1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.4.0.GA</version>
-        </dependency>
 
         <!-- TAR/ZIP DEPENDENCIES -->
         <dependency>
@@ -252,125 +311,5 @@
         </plugins>
     </build>
 
-
-    <!--
-
-                            <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-javadoc-plugin</artifactId>
-                                <version>2.7</version>
-                                <configuration>
-                                    <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
-                                    <docletArtifact>
-                                        <groupId>gr.spinellis</groupId>
-                                        <artifactId>UmlGraph</artifactId>
-                                        <version>4.4</version>
-                                    </docletArtifact>
-                                    <additionalparam>
-                         <![CDATA[
-     -charset UTF-8
-     -docencoding UTF-8
-     -version
-     -author
-     -breakiterator
-     -windowtitle "${project.name} ${project.version} API Reference"
-     -doctitle "<img src='doc-files/logo.png'><br><b><font size='+2'>SDC Server</b></font><br>"
-     -bottom "Copyright &#169; ${project.inceptionYear}-Present ${project.organization.name} All Rights Reserved."
-     -use
-     -tag async:a:Asynchronous
-     -inferrel -inferdep -quiet -hide java.* -collpackages java.util.* -qualify
-     -postfixpackage -nodefontsize 9
-     -nodefontpackagesize 7
-                         ]]>
-                                    </additionalparam>
-                                </configuration>
-                            </plugin>
-
-
-                            <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-checkstyle-plugin</artifactId>
-                                <version>2.6</version>
-                            </plugin>
-                            <plugin>
-                                <groupId>org.codehaus.mojo</groupId>
-                                <artifactId>findbugs-maven-plugin</artifactId>
-                                <version>2.3.1</version>
-                                <configuration>
-                                    <argLine>-Xmx256m</argLine>
-                                    <argLine>-XX:MaxPermSize=256m</argLine>
-                                </configuration>
-
-                            </plugin>
-                            <plugin>
-                                <groupId>org.codehaus.mojo</groupId>
-                                <artifactId>jdepend-maven-plugin</artifactId>
-                                <version>2.0-beta-2</version>
-                            </plugin>
-                            <plugin>
-                                <groupId>org.codehaus.mojo</groupId>
-                                <artifactId>cobertura-maven-plugin</artifactId>
-                                <version>2.4</version>
-                            </plugin>
-                            <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-jxr-plugin</artifactId>
-                                <version>2.1</version>
-                            </plugin>
-                            <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-pmd-plugin</artifactId>
-                                <version>2.5</version>
-                                <configuration>
-                                    <linkXref>true</linkXref>
-                                    <minimumTokens>100</minimumTokens>
-                                    <minimumPriority>3</minimumPriority>
-
-                                    <targetJdk>1.6</targetJdk>
-                                </configuration>
-                            </plugin>
-                        </reportPlugins>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
-
-
-
-       <reporting>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.8</version>
-                    <configuration>
-                        <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
-                        <docletArtifact>
-                            <groupId>gr.spinellis</groupId>
-                            <artifactId>UmlGraph</artifactId>
-                            <version>4.4</version>
-                        </docletArtifact>
-                        <additionalparam>
-                         <![CDATA[
-     -charset UTF-8
-     -docencoding UTF-8
-     -version
-     -author
-     -breakiterator
-     -windowtitle "${project.name} ${project.version} API Reference"
-     -doctitle "<img src='doc-files/logo.png'><br><b><font size='+2'>SDC Server</b></font><br>"
-     -bottom "Copyright &#169; ${project.inceptionYear}-Present ${project.organization.name} All Rights Reserved."
-     -use
-     -tag async:a:Asynchronous
-     -inferrel -inferdep -quiet -hide java.* -collpackages java.util.* -qualify
-     -postfixpackage -nodefontsize 9
-     -nodefontpackagesize 7
-                         ]]>
-                        </additionalparam>
-                    </configuration>
-                </plugin>
-
-            </plugins>
-        </reporting> -->
 
 </project>
